# WhatsInMyFridge

./: .gitignore  .pre-commit-config.yaml  README.md  brainstom.md  docker-compose.yml
.opencode/agent/: ad-hoc-implementer.md  security-officer.md  story-analyzer.md  story-builder.md  story-done.md  story-execute-orchestrator.md  story-implementer.md  story-pr.md  story-ship-orchestrator.md  story-start.md  story-validator.md
.opencode/commands/: init.md
.opencode/custom/init/: init.sh
.opencode/skills/threat-model/: SKILL.md  bootstrap.md  schema.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  crud.py  main.py  models.py  schemas.py
backend/app/routers/: foodstuffs.py  inventory.py
backend/tests/: conftest.py  test_inventory_foundation.py
backend/whats_in_my_fridge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
work/: README.md  project-config.md
work/adr/: 2026-06-22-use-fastapi-sqlalchemy-and-postgresql-for-the-backend.md  2026-06-22-use-react-typescript-and-vite-for-the-frontend.md
work/backlog/backlog/: 2026-06-22-add-authentication-and-user-boundaries.md  2026-06-22-add-overview-dashboard-snapshot.md  2026-06-22-add-pre-commit-linting.md  2026-06-22-add-receipt-import-flow.md  2026-06-22-adopt-reference-app-shell-navigation.md  2026-06-22-containerize-application.md  2026-06-22-core-inventory-foundation.md  (+8 more)
work/guidelines/: frontend.md
(+4 files in other folders)
